Ny redigeret udgave

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #FFFFFF;
-	background-image: url(gradient.jpg);
+	background-image: url(images/gradient.jpg);
 	background-repeat: no-repeat;
 	color: #666666;
 	font-family: arial, sans;
